welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: illegal start of simple expression
  val dec = litMessage(.toInt)
                       ^Array2:35: error: ')' expected but '}' found.
}
^